--- a/apps/finances-frontend/src/app/dashboard/overview/all-time-overview.component.scss
+++ b/apps/finances-frontend/src/app/dashboard/overview/all-time-overview.component.scss
@@ -1,7 +1,7 @@
 // ===== ALL-TIME OVERVIEW COMPONENT STYLES =====
 // Modern, comprehensive financial dashboard design using shared mixins
 
-@import '../../../styles/mixins';
+@import 'styles/mixins';
 
 // ===== MAIN CONTAINER =====
 .dashboard-container {
