--- a/apps/finances-frontend/src/app/dashboard/transactions/transactions.component.scss
+++ b/apps/finances-frontend/src/app/dashboard/transactions/transactions.component.scss
@@ -1,7 +1,7 @@
 // ===== TRANSACTIONS COMPONENT STYLES =====
 // Transactions management page using shared mixins
 
-@import '../../../styles/mixins';
+@import 'styles/mixins';
 
 // ===== MAIN CONTAINER =====
 .transactions-container {
