--- a/apps/finances-frontend/src/app/home/home.component.scss
+++ b/apps/finances-frontend/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
 // ===== HOME COMPONENT STYLES =====
 // Landing page design using shared mixins
 
-@import '../../styles/mixins';
+@import 'styles/mixins';
 
 // ===== BACKGROUND & WRAPPER =====
 .gradient-background {
