--- a/apps/finances-frontend/src/app/login/login.component.scss
+++ b/apps/finances-frontend/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 // ===== LOGIN COMPONENT STYLES =====
 // Authentication page design using shared mixins
 
-@import '../../styles/mixins';
+@import 'styles/mixins';
 
 // ===== BACKGROUND & WRAPPER =====
 .gradient-background {
