--- a/apps/finances-frontend/src/app/register/register.component.scss
+++ b/apps/finances-frontend/src/app/register/register.component.scss
@@ -1,7 +1,7 @@
 // ===== REGISTER COMPONENT STYLES =====
 // Registration page design using shared mixins
 
-@import '../../styles/mixins';
+@import 'styles/mixins';
 
 // ===== BACKGROUND & WRAPPER =====
 .gradient-background {
